# near-ai-agent

./: .env.example  .gitignore  pyproject.toml
src/: config.py  main.py  tools.py
